k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-3tier-app
  labels:
    name: node-3tier-app
